--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div>
                 <h1>FIND OUT MORE ABOUT THE BMW VISION NEUE KLASSE.</h1>
                 <h3>THE NEW ERA OF MOBILITY.</h3>
-                <button>Learn More</button>
+                <button class="btn">Learn More</button>
             </div>
         </div>
     </section>
